Fixed scrollbar and PDF previews

--- a/src/App.css
+++ b/src/App.css
@@ -38,12 +38,17 @@
   scrollbar-color: #857dff30 transparent;
 }
 
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px; 
+}
+
 .custom-scrollbar::-webkit-scrollbar-track {
   background: transparent;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: #857dff30;
+  border-radius: 9999px;
 }
 
 body {
